--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tjhsst-electron-dayschedule",
   "productName": "TJHSST Day Schedule",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "description": "TJHSST Day Schedule powered by Electron",
   "license": "MIT",
   "repository": "tcyrus/tjhsst-electron-dayschedule",
