--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "tjhsst-electron-dayschedule",
-  "appName": "TJHSST Day Schedule",
-  "version": "0.0.2",
+  "name": "tjhsst-electron-bellschedule",
+  "productName": "TJHSST Bell Schedule",
+  "version": "0.0.3-alpha",
   "main": "main.js",
-  "description": "TJHSST Day Schedule powered by Electron",
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-packager . --out=dist --app-version=$npm_package_version --ignore=scss --prune --asar --overwrite --all"
+  },
+  "description": "TJHSST Bell Schedule powered by Electron",
   "license": "MIT",
-  "repository": "tcyrus/tjhsst-electron-dayschedule",
+  "repository": "tcyrus/tjhsst-electron-bellschedule",
   "author": {
     "name": "TCYRUS",
     "email": "admin@tcyr.us",
@@ -21,7 +25,7 @@
     "menubar": "~4.1.1"
   },
   "devDependencies": {
-    "electron-prebuilt": "^1.0.2",
+    "electron-prebuilt": "^1.1.0",
     "electron-packager": "^7.0.1"
   }
 }
