--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "./node_modules/.bin/electron .",
+    "sass": "sass --update scss:css --force --style compressed",
     "build": "./node_modules/.bin/electron-packager . --out=dist --app-version=$npm_package_version --ignore=scss --prune --asar --overwrite --all"
   },
   "description": "TJHSST Bell Schedule powered by Electron",
